Bug #366842 --> IM icon is broken in the customize toolbar dialog. Patch by Phil Ringnalda <philringnalda@gmail.com> sr=mscott

--- a/mozilla/mail/themes/pinstripe/mail/addrbook/addressbook.css
+++ b/mozilla/mail/themes/pinstripe/mail/addrbook/addressbook.css
@@ -71,7 +71,7 @@ toolbar {
 /* ::::: primary toolbar buttons ::::: */
 
 .toolbarbutton-1 {
-	list-style-image: url("chrome://messenger/skin/addressbook/icons/addressbook-toolbar.png");
+  list-style-image: url("chrome://messenger/skin/addressbook/icons/addressbook-toolbar.png");
   -moz-box-orient: vertical;
 }
 
@@ -85,6 +85,7 @@ toolbarbutton[type="menu-button"] > toolbarbutton {
 /* ::::: new single card icon ::::: */
 
 #button-newcard {
+  list-style-image: url("chrome://messenger/skin/addressbook/icons/addressbook-toolbar.png");
   -moz-image-region: rect(0px 32px 32px 0px);
 }
 
@@ -99,6 +100,7 @@ toolbarbutton[type="menu-button"] > toolbarbutton {
 /* ::::: new list card icon ::::: */
 
 #button-newlist {
+  list-style-image: url("chrome://messenger/skin/addressbook/icons/addressbook-toolbar.png");
   -moz-image-region: rect(0px 64px 32px 32px);
 }
 
@@ -113,6 +115,7 @@ toolbarbutton[type="menu-button"] > toolbarbutton {
 /* ::::: edit card icon ::::: */
 
 #button-editcard {
+  list-style-image: url("chrome://messenger/skin/addressbook/icons/addressbook-toolbar.png");
   -moz-image-region: rect(0px 96px 32px 64px);
 }
 
@@ -127,6 +130,7 @@ toolbarbutton[type="menu-button"] > toolbarbutton {
 /* ::::: new message icon ::::: */
 
 #button-newmessage {
+  list-style-image: url("chrome://messenger/skin/addressbook/icons/addressbook-toolbar.png");
   -moz-image-region: rect(0px 128px 32px 96px);
 }
 
@@ -141,6 +145,7 @@ toolbarbutton[type="menu-button"] > toolbarbutton {
 /* ::::: instant message icon ::::: */
 
 #button-newim {
+  list-style-image: url("chrome://messenger/skin/addressbook/icons/addressbook-toolbar.png");
   -moz-image-region: rect(0px 160px 32px 128px);
 }
  
@@ -155,6 +160,7 @@ toolbarbutton[type="menu-button"] > toolbarbutton {
 /* ::::: delete icon ::::: */
 
 #button-abdelete {
+  list-style-image: url("chrome://messenger/skin/addressbook/icons/addressbook-toolbar.png");
   -moz-image-region: rect(0px 192px 32px 160px);
 }
 
